src/objects/XO_Employee__c.object
<CustomObject>
    <fields>
        <fullName>PPD_last_done_negative__c</fullName>
        <label>PPD Last Done (negative)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Hire_Health_Screening_Questionnaire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Hire Health Screening Questionnaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProfConduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Professional Conduct Policy</description>
        <inlineHelpText>Professional Conduct Policy</inlineHelpText>
        <label>ProfConduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_Conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional Conduct Agreement Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Check_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enter the name of the Employee Reference</description>
        <label>Reference Check #2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Check_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enter the name of the Employee Reference</description>
        <label>Reference Check Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Check_Date__c</fullName>
        <label>Reference Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_NPDB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Verify registration with the NPDB of all licensed staff (MD, Chiro, Acu, PT, and other licensed professionals).</inlineHelpText>
        <label>Registered NPDB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resume_on_file__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resume on file</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Personalized_Policies__c</fullName>
        <label>Employee Handbook / Personnel Policies</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_QI_Program__c</fullName>
        <label>Review QI Program</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SexHar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SexHar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sexual_Harrassment_Agreement_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sexual Harrassment Agreement Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Receipt_of_Handbook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Receipt of Handbook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Personal_Contact_Phone__c</fullName>
        <label>Spouse/Personal Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Spouse_Personal_Contact__c</fullName>
        <label>Spouse/Personal Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_1_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage 1 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_4_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage 4 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_5_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage 5 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Three_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage 3 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Two_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stage 2 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_License__c</fullName>
        <label>State License</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TB_Symptom_Screening_Questionnaire__c</fullName>
        <label>TB Symptom Screening Questionnaire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tdap_Administered__c</fullName>
        <label>Tdap Administered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tdap_Vaccine__c</fullName>
        <label>Tdap Vaccine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vaccinated</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TechUse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technology Use Agreement</description>
        <inlineHelpText>Technology Use Agreement</inlineHelpText>
        <label>TechUse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technology_Use_Agreement_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technology Use Agreement Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Date employment status was terminated</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timecard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timecard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Varicella_Administered__c</fullName>
        <label>Varicella Administered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Varicella_Vaccine__c</fullName>
        <label>Varicella Vaccine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vaccinated</fullName>
                </value>
                <value>
                    <fullName>Had Disease</fullName>
                </value>
                <value>
                    <fullName>Positive Titer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Effective_Date__c</fullName>
        <label>Vision Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Insurance__c</fullName>
        <label>Vision Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>W4_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W4 Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>W_4_Tax_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-4 Tax Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>W_9_For_Contractors_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-9 (For Contractors Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X401K__c</fullName>
        <defaultValue>false</defaultValue>
        <label>401K</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XO_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XO Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XO_Asset_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XO Asset Tracking</label>
        <referenceTo>Asset_Tracking__c</referenceTo>
        <relationshipName>XO_Employee_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XO_Assigned_Email__c</fullName>
        <externalId>true</externalId>
        <label>XO Assigned Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>XO_Bio_Headshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XO Bio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XO_Company__c</fullName>
        <label>XO Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSO</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XO_Department__c</fullName>
        <label>XO Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aliso Viejo</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>Cupertino</fullName>
                </value>
                <value>
                    <fullName>Gloucester</fullName>
                </value>
                <value>
                    <fullName>Menlo Park</fullName>
                </value>
                <value>
                    <fullName>Mountain View</fullName>
                </value>
                <value>
                    <fullName>Palo Alto</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Santa Clara</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XO_Division__c</fullName>
        <label>XO Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>XO Apple</fullName>
                </value>
                <value>
                    <fullName>XO Applied Materials</fullName>
                </value>
                <value>
                    <fullName>XO Cummins</fullName>
                </value>
                <value>
                    <fullName>XO Facebook</fullName>
                </value>
                <value>
                    <fullName>XO Frost Bank</fullName>
                </value>
                <value>
                    <fullName>XO HEB - Cypress</fullName>
                </value>
                <value>
                    <fullName>XO HEB - Rittiman</fullName>
                </value>
                <value>
                    <fullName>XO San Tomas</fullName>
                </value>
                <value>
                    <fullName>XO Shoreline</fullName>
                </value>
                <value>
                    <fullName>XO Square</fullName>
                </value>
                <value>
                    <fullName>XO WWHQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XO_Emergency_Action_Plan__c</fullName>
        <label>XO Emergency Action Plan</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XO_Exposure_Control_Plan__c</fullName>
        <label>XO Exposure Control Plan (RN, MD, Acu)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XO_HIPPA_Training__c</fullName>
        <label>XO HIPPA Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XO_HazCom_Plan__c</fullName>
        <label>XO HazCom Plan (RN, MD, Acu)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XO_Headshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XO Headshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XO_Illness_Injury_Prevention_Program__c</fullName>
        <label>XO Illness &amp; Injury Prevention Program</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XO_Infection_Prevention_Program__c</fullName>
        <description>XO Infection Prevention Program (RN, MD, Acu)</description>
        <inlineHelpText>XO Infection Prevention Program (RN, MD, Acu)</inlineHelpText>
        <label>XO Infection Prevention Program</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XO_OSHA_Training_HazCom_BBP__c</fullName>
        <label>XO OSHA Training (HazCom &amp; BBP)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XO_Personal_Profile_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Profile &amp; Direct Deposit Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XO_Risk_Management_Program__c</fullName>
        <label>XO Risk Management Program</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XO_Safety_Plan__c</fullName>
        <label>XO Safety Plan</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yellow_Fever_Certificate_Expiration__c</fullName>
        <label>Yellow Fever Certificate Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yellow_Fever_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yellow Fever Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>XO Employee</label>
    <listViews>
        <fullName>Crossover_Active_Employees</fullName>
        <columns>NAME</columns>
        <columns>Employee_Last_Name__c</columns>
        <columns>Employee_First_Name__c</columns>
        <columns>Full_Time_Equivalent__c</columns>
        <columns>Full_Time_Equivalent_old__c</columns>
        <filterScope>Everything</filterScope>
        <label>Facebook Menlo Park Employees</label>
        <sharedTo>
            <role>XO_Executive_Office</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Employee ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XO Employee</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Hardware_NA</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Hardware__c , &quot;Not Applicable&quot;), XO_Asset_Tracking__c  &lt;&gt; &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>XO_Asset_Tracking__c</errorDisplayField>
        <errorMessage>You can not use this field if Hardware is &quot;Not Applicable&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( OR( ISBLANK(Social_Security_Number__c),
REGEX( Social_Security_Number__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)))</errorConditionFormula>
        <errorDisplayField>Social_Security_Number__c</errorDisplayField>
        <errorMessage>Please enter a valid Social Security Number (###-##-####).</errorMessage>
    </validationRules>
</CustomObject>